--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 										<option value="4">Defy 2-bit</option>
 										<option value="5">Defy 1-bit</option>
 										<option value="6">QPA 4.6-bit</option>
-										<option value="7">QPA 3.2-bit</option>
-										<option value="8">QPA 2.3-bit</option>
-										<option value="9">QPA 1.1-bit</option>
+										<option value="7">QPA 3.6-bit</option>
+										<option value="8">QPA 3.2-bit</option>
+										<option value="9">QPA 2.3-bit</option>
+										<option value="10">QPA 1.1-bit</option>
 									</select>
 									</div>
 									<div class="form-group">
@@ -89,9 +90,11 @@
 								<li>Defy 2.6-Bit&mdash; 3 to 1 compresssion compared to 8-bit, lower quality</li>
 								<li>Defy 2-Bit&mdash; 4 to 1 compresssion compared to 8-bit suitable for intelligible speech.</li>
 								<li>Defy 1-Bit&mdash; 8 to 1 compresssion compared to 8-bit, lowest quality.</li>
-								<li>QPA 3.2-Bit&mdash; 2.5 to 1 compresssion compared to 8-bit, quality comparable to Defy 4-bit - which is better can depend on source material.</li>
-								<li>QPA 2.3-Bit&mdash; 3.5 to 1 compresssion compared to 8-bit, quality between Defy 2.6-Bit and Defy 4-Bit.</li>
-								<li>QPA 1.1-Bit&mdash; 7 to 1 compresssion compared to 8-bit, quality comparable to Defy 2-Bit.</li>
+								<li>QPA 4.6-Bit&mdash; 1.75 to 1 compression compared to 8-bit.</li>
+								<li>QPA 3.6-Bit&mdash; 2.25 to 1 compression compared to 8-bit.</li>
+								<li>QPA 3.2-Bit&mdash; 2.5 to 1 compression compared to 8-bit. Generally comparable to Defy 4-bit, but results may depend on material.</li>
+								<li>QPA 2.3-Bit&mdash; 3.5 to 1 compression compared to 8-bit, quality between Defy 2.6-Bit and Defy 4-Bit. Generally good for intelligible speech.</li>
+								<li>QPA 1.1-Bit&mdash; 7 to 1 compression compared to 8-bit, quality comparable to Defy 2-Bit. Produces mostly (but not entirely) intelligible speech.</li>
 							</ul>
 						<li>The antialiasing filter improves audio downsampling for most browsers including Chrome.</li>	<li>To play Defy files:</li>
 							<ol>
@@ -251,57 +254,67 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 const QPA1_CONFIG = {
     slice_len: 28,
     scale_bits: 4,
-    scale_exponent: 1.25,
     residual_bits: 1,
-    dequant_tab: [1, -1],
+    scale_exponent: 2,
+    dequant_tab: [0.125, -0.125],
     chunk_size: 7,
-    update_shift: 2,
-    predict_shift: 8,
+    update_shift: 3,
+    predict_shift: 7,
     magic: 0x31617071, /* 'qpa1' */
 };
 
 const QPA2_CONFIG = {
     slice_len: 14,
     scale_bits: 4,
-    scale_exponent: 1.0,
     residual_bits: 2,
-    dequant_tab: [1.0, -1.0, 3.5, -3.5],
+    scale_exponent: 2,
+    dequant_tab: [0x10/256, -0x10/256, 0x40/256, -0x40/256],
     chunk_size: 4,
-    update_shift: 2,
-    predict_shift: 8,
+    update_shift: 3,
+    predict_shift: 7,
     magic: 0x32617071, /* 'qpa2' */
 };
 
 const QPA3_CONFIG = {
-    slice_len: 10,
-    scale_bits: 2,
-    scale_exponent: 1.5,
+    slice_len: 9,
+    scale_bits: 5,
     residual_bits: 3,
-    dequant_tab: [0.75, -0.75, 2.5, -2.5, 4.5, -4.5, 7.0, -7.0],
+    scale_exponent: 2,
+    dequant_tab: [0x60/256,-0x60/256,0x14b/256,-0x14b/256,0x28f/256,-0x28f/256,0x400/256,-0x400/256],
     chunk_size: 3,
-    update_shift: 2,
-    predict_shift: 9,
+    update_shift: 3,
+    predict_shift: 7,
     magic: 0x33617071, /* 'qpa3' */
 };
 
 const QPA4_CONFIG = {
     slice_len: 7,
     scale_bits: 4,
-    scale_exponent: 1.0,
     residual_bits: 4,
-    dequant_tab: [0.75, -0.75, 2.5, -2.5, 4.5, -4.5, 6.5, -6.5, 8.5, -8.5, 10.5, -10.5, 12.5, -12.5, 15.0, -15.0],
+    scale_exponent: 2,
+    dequant_tab: [0x2/256,-0x2/256,0x8/256,-0x8/256,0xf/256,-0xf/256,0x18/256,-0x18/256],
     chunk_size: 2,
-    update_shift: 2,
-    predict_shift: 9,
+    update_shift: 3,
+    predict_shift: 7,
     magic: 0x34617071, /* 'qpa4' */
 };
 
+const QPA5_CONFIG = {
+    slice_len: 7,
+    scale_bits: 4,
+    scale_exponent: 2,
+    residual_bits: 4,
+    dequant_tab: [0x6/256, -0x6/256, 0x14/256, -0x14/256, 0x24/256, -0x24/256, 0x35/256, -0x35/256, 0x47/256, -0x47/256, 0x5a/256, -0x5a/256, 0x6d/256, -0x6d/256, .5, -.5],
+    chunk_size: 2,
+    update_shift: 3,
+    predict_shift: 7,
+    magic: 0x35617071, /* 'qpa5' */
+};
 
 function floats_to_bytes(data) {
     const bytes = new Uint8Array(data.length);
     for (let i = 0; i < data.length; i++) {
-        const x = data[i];
-        bytes[i] = 128 + Math.floor(Math.fround(Math.max(-128, Math.min(127, (x < 0 ? 128 * x : 127 * x)))));
+        bytes[i] = Math.max(0, Math.min(255, 128 + Math.trunc(-0.875 + .75*Math.random() + data[i] * 127.125)));
     }
     return bytes;
 }
@@ -341,15 +354,27 @@ class BitOutputStream {
 }
 
 
+function pico_mul(a, b) {
+    return Math.floor((a*b)/65536)&0xffffffff;
+}
+
+function to_pico(a) {
+    return (a*65536)&0xffffffff;
+}
+
+function from_pico(a) {
+    return a/65536;
+}
+
 function make_scalefactor_tab(scale_bits, scale_exponent) {
     return Array(1 << scale_bits).fill().map(
-        (_, s) => qpa_round(Math.pow(s + 1, scale_exponent))
+        (_, s) => Math.pow(s + 1, scale_exponent)
     );
 }
 
 function expand_dequant_tab(raw_dequant_tab, scalefactor_tab) {
     return scalefactor_tab.map((sf) => {
-        return raw_dequant_tab.map((dq) => qpa_round(dq*sf));
+        return raw_dequant_tab.map((dq) => pico_mul(to_pico(sf),to_pico(dq)));
     });
 }
 
@@ -357,37 +382,138 @@ function qpa_clamp(v, min, max) {
     return v < min ? min : v > max ? max : v;
 }
 
-function qpa_round(num) {
-    return Math.sign(num) * Math.round(Math.abs(num));
+class BiquadFilterBank {
+    constructor(filters, smoothness) {
+        this.filters = filters;
+        this.decay = 1.0 - smoothness;
+        this.w1 = new Array(filters.length).fill(0);
+        this.w2 = new Array(filters.length).fill(0);
+        this.y = new Array(filters.length).fill(0);
+        this.energy = new Array(filters.length).fill(0);
+    }
+
+    clone_from(other) {
+        this.filters = other.filters;
+        this.decay = other.decay;
+        for (let i = 0; i < this.filters.length; i++) {
+            this.w1[i] = other.w1[i];
+            this.w2[i] = other.w2[i];
+            this.y[i] = other.y[i];
+            this.energy[i] = other.energy[i];
+        }
+    }
+
+    update(x) {
+        for (let i = 0; i < this.filters.length; i++) {
+            const filter = this.filters[i];
+            const w1 = this.w1[i];
+            const w2 = this.w2[i];
+            const w = x - w1*filter[4] - w2*filter[5];
+            const y = w*filter[0] + w1*filter[1] + w2*filter[2];
+            this.energy[i] += (y*y - this.energy[i]) * this.decay;
+            this.y[i] = y;
+            this.w2[i] = w1;
+            this.w1[i] = w;
+        }
+    }
+}
+
+function analyze_signal(bytes, smooth_fwd, smooth_back) {
+    const fb_fwd = fb_new(smooth_fwd);
+    const fb_back = fb_new(smooth_back);
+    const fs = fb_fwd.filters.length;
+
+    const result = [];
+    for (let i = 0; i < fs; i++) {
+        result.push(new Array(bytes.length).fill(0));
+    }
+
+    for (let i = 0; i < bytes.length; i++) {
+        fb_fwd.update(bytes[i] - 128);
+        fb_back.update(bytes[bytes.length-1-i] - 128);
+        for (let j = 0; j < fs; j++) {
+            result[j][i] += fb_fwd.energy[j] + fb_back.energy[j];
+        }
+    }
+
+    return result;
+}
+
+
+function fb_new(smoothness) {
+    // Octave spacing
+    return new BiquadFilterBank([
+        //        [ 0.02392435 , 0.        , -0.02392435 , 1.        , -1.94746289 , 0.9521513 ],
+        //        [ 0.04675748 , 0.        , -0.04675748 , 1.        , -1.88818109 , 0.90648505],
+        //        [ 0.08953392 , 0.        , -0.08953392 , 1.        , -1.7511697  , 0.82093216],
+        //        [ 0.16569167 , 0.        , -0.16569167 , 1.        , -1.41535765 , 0.66861666],
+        //        [ 0.29253842 , 0.        , -0.29253842 , 1.        , -0.5885022  , 0.41492315],
+        //        [ 0.49939448 , 0.        , -0.49939448 , 1.        ,  0.996361   , 0.00121105],
+
+        // [ 0.010049   , 0.        , -0.010049   , 1.        , -1.97653984 , 0.97990201],
+        // [ 0.014153   , 0.        , -0.014153   , 1.        , -1.9649992  , 0.97169401],
+        // [ 0.01990005 , 0.        , -0.01990005 , 1.        , -1.94689498 , 0.96019991],
+        // [ 0.02791656 , 0.        , -0.02791656 , 1.        , -1.91780092 , 0.94416688],
+        // [ 0.03903899 , 0.        , -0.03903899 , 1.        , -1.86989719 , 0.92192202],
+        // [ 0.05435918 , 0.        , -0.05435918 , 1.        , -1.78929822 , 0.89128163],
+        // [ 0.07525929 , 0.        , -0.07525929 , 1.        , -1.65160954 , 0.84948143],
+        // [ 0.10341972 , 0.        , -0.10341972 , 1.        , -1.41557095 , 0.79316056],
+        // [ 0.14078546 , 0.        , -0.14078546 , 1.        , -1.01772408 , 0.71842908],
+        // [ 0.18950185 , 0.        , -0.18950185 , 1.        , -0.38292877 , 0.62099631],
+        // [ 0.25191606 , 0.        , -0.25191606 , 1.        ,  0.50020678 , 0.49616789],
+        // [ 0.33095135 , 0.        , -0.33095135 , 1.        ,  1.33487524 , 0.33809731],
+
+        [ 0.00632936 , 0.        , -0.00632936 , 1.        , -1.98433465 , 0.98734129],
+        [ 0.00796145 , 0.        , -0.00796145 , 1.        , -1.97931285 , 0.98407709],
+        [ 0.01001021 , 0.        , -0.01001021 , 1.        , -1.97243411 , 0.97997957],
+        [ 0.0125796  , 0.        , -0.0125796  , 1.        , -1.96289844 , 0.9748408 ],
+        [ 0.01579814 , 0.        , -0.01579814 , 1.        , -1.94951879 , 0.96840372],
+        [ 0.01982399 , 0.        , -0.01982399 , 1.        , -1.93052327 , 0.96035202],
+        [ 0.02485057 , 0.        , -0.02485057 , 1.        , -1.90325807 , 0.95029886],
+        [ 0.03111265 , 0.        , -0.03111265 , 1.        , -1.86374807 , 0.9377747 ],
+        [ 0.03889257 , 0.        , -0.03889257 , 1.        , -1.80606362 , 0.92221486],
+        [ 0.04852597 , 0.        , -0.04852597 , 1.        , -1.72144953 , 0.90294806],
+        [ 0.06040625 , 0.        , -0.06040625 , 1.        , -1.59722771 , 0.8791875 ],
+        [ 0.07498673 , 0.        , -0.07498673 , 1.        , -1.41566834 , 0.85002653],
+        [ 0.09277935 , 0.        , -0.09277935 , 1.        , -1.15350577 , 0.8144413 ],
+        [ 0.11434917 , 0.        , -0.11434917 , 1.        , -0.78388637 , 0.77130165],
+        [ 0.14030532 , 0.        , -0.14030532 , 1.        , -0.28477433 , 0.71938936],
+        [ 0.17129164 , 0.        , -0.17129164 , 1.        ,  0.33856787 , 0.65741672],
+        [ 0.20798602 , 0.        , -0.20798602 , 1.        ,  1.00675655 , 0.58402796],
+        [ 0.25112663 , 0.        , -0.25112663 , 1.        ,  1.49529618 , 0.49774675],
+
+    ], smoothness);
 }
 
 class QPAEncoder {
     constructor(samples, predict_shift, update_shift) {
-        this.weights = new Int16Array(4);
-        this.history = new Int8Array(4);
+        this.weights = new Int32Array(4);
+        this.history = new Int32Array(4);
         this.error_dc = 0;
+        this.signal_dc = 0;
         this.idx = 0;
         this.samples = samples;
         this.predict_shift = predict_shift;
         this.update_shift = update_shift;
+        this.rms = 0;
     }
 
     predict() {
         const weights = this.weights;
         const history = this.history;
-        return ((
-            weights[0] * history[0] +
-            weights[1] * history[1] +
-            weights[2] * history[2] +
-            weights[3] * history[3]
-        ) >> this.predict_shift);
+        return (
+            pico_mul(weights[0], history[0]) +
+            pico_mul(weights[1], history[1]) +
+            pico_mul(weights[2], history[2]) +
+            pico_mul(weights[3], history[3])
+        )&0xffffffff;
     }
 
     update(residual, reconstructed) {
-        const sample = this.samples[this.idx++] - 128;
+        const sample = this.samples[this.idx] * 127.49 - 0.5;
         const weights = this.weights;
         const history = this.history;
-        const delta = residual >> this.update_shift;
+        const delta = (residual >> this.update_shift);
         weights[0] += history[0] < 0 ? -delta : delta;
         weights[1] += history[1] < 0 ? -delta : delta;
         weights[2] += history[2] < 0 ? -delta : delta;
@@ -395,11 +521,18 @@ class QPAEncoder {
         history[0] = history[1];
         history[1] = history[2];
         history[2] = history[3];
-        history[3] = reconstructed;
-        let error = sample-reconstructed;
+        history[3] = reconstructed >> this.predict_shift;
+        this.signal_dc = (this.signal_dc + sample)*.5;
+        const rms_sample = sample - .875*this.signal_dc;
+        this.rms += (rms_sample*rms_sample - this.rms)*(1/128);
+        let error = from_pico(to_pico(sample+128)-((reconstructed+0x7f0000)&0xff0000));
+
         this.error_dc = (this.error_dc + error)*.5;
         error -= .875*this.error_dc;
-        return error*error;
+
+        this.idx += 1;
+
+        return error*error/(1+this.rms);
     }
 
     clone_from(other) {
@@ -416,7 +549,9 @@ class QPAEncoder {
         this_history[2] = other_history[2];
         this_history[3] = other_history[3];
         this.error_dc = other.error_dc;
+        this.signal_dc = other.signal_dc;
         this.idx = other.idx;
+        this.rms = other.rms;
     }
 
     copy() {
@@ -424,21 +559,17 @@ class QPAEncoder {
         new_enc.clone_from(this);
         return new_enc;
     }
-
-    samples_left() {
-        return this.samples.length - this.idx;
-    }
 }
 
-function qpa_encode(bytes, config) {
-    const scalefactor_tab = make_scalefactor_tab(config.scale_bits, config.scale_exponent);
+function qpa_encode(data, config) {
+    const scalefactor_tab = config.scale_tab ?? make_scalefactor_tab(config.scale_bits, config.scale_exponent);
     const dequant_tab = expand_dequant_tab(config.dequant_tab, scalefactor_tab);
 
-    const num_samples = bytes.length;
+    const num_samples = data.length;
     const num_slices = (num_samples + config.slice_len - 1) / config.slice_len;
-    const enc = new QPAEncoder(bytes, config.predict_shift, config.update_shift);
-    enc.weights[2]=-1<<5;
-    enc.weights[3]=1<<6;
+    const enc = new QPAEncoder(data, config.predict_shift, config.update_shift);
+    enc.weights[2]=to_pico(-32);
+    enc.weights[3]=to_pico(64);
     const sf_enc = enc.copy();
     const best_sf_enc = enc.copy();
     const chunk_enc = enc.copy();
@@ -460,7 +591,7 @@ function qpa_encode(bytes, config) {
       sample_index += config.slice_len
     ) {
         const slice_len = qpa_clamp(config.slice_len, 0, num_samples - sample_index);
-        /* Brute for search for the best scalefactor. Just go through all
+        /* Brute force search for the best scalefactor. Just go through all
         16 scalefactors, encode all samples for the current slice and 
         meassure the total squared error. */
         let best_sf_error = Infinity;
@@ -479,14 +610,15 @@ function qpa_encode(bytes, config) {
                 let best_chunk_quant;
                 const chunk_size = Math.min(config.chunk_size, slice_len-i);
                 const residual_mask = (1 << config.residual_bits)-1;
+                let zero_mult=(scalefactor===0) ? 0 : 1;
                 for (let j = 0; j < (1 << (config.residual_bits * chunk_size)); j++) {
                     chunk_enc.clone_from(sf_enc);
                     let chunk_error = 0;
                     for (let k = 0; k < chunk_size; k++) {
                         const predicted = chunk_enc.predict();
                         const quant = (j>>(k * config.residual_bits))&residual_mask;
-                        const dequantized = table[quant];
-                        const reconstructed = qpa_clamp(predicted + dequantized, -128, 127);
+                        const dequantized = table[quant] * zero_mult;
+                        const reconstructed = qpa_clamp((predicted + dequantized)&0xffffffff, 65536*-128, 65536*127);
                         chunk_error += chunk_enc.update(dequantized, reconstructed);
                         if (chunk_error > best_chunk_error) {
                             break;
@@ -498,6 +630,7 @@ function qpa_encode(bytes, config) {
                         best_chunk_enc.clone_from(chunk_enc);
                     }
                 }
+                zero_mult=1;
                 if (best_chunk_error==Infinity) {
                     throw new Error('no best value found');
                 }
@@ -532,7 +665,6 @@ function qpa_encode(bytes, config) {
         }
         error += best_sf_error;
     }
-    console.log('err:', Math.sqrt(error/num_samples));
 
     return swap_endianness(stream.bytes());
 }
@@ -664,10 +796,10 @@ function qpa_encode(bytes, config) {
 					switch (format)
 					{
 						case 0: //Unsigned 8 bit PCM
-							data=new Uint8Array(data.map(value=>Math.trunc(value*128+128)))
+							data=floats_to_bytes(data)
 							break
 						case 1: //defy PCM
-							data=new Uint8Array([...header(),...data.map(value=>Math.trunc(value*128+128))])
+							data=new Uint8Array([...header(),...floats_to_bytes(data)])
 							break
 						case 2: //defy 4 bit
 							var dataIn= data
@@ -748,16 +880,19 @@ function qpa_encode(bytes, config) {
 							data=new Uint8Array([...header(),...data])
 							break	
 						case 6: // QPA 4.6 bit
-							data=new Uint8Array([...header(),...qpa_encode(floats_to_bytes(data), QPA4_CONFIG)]);
+							data=new Uint8Array([...header(),...qpa_encode(data, QPA5_CONFIG)]);
 							break
-						case 7: // QPA 3.2 bit
-							data=new Uint8Array([...header(),...qpa_encode(floats_to_bytes(data), QPA3_CONFIG)]);
+						case 7: // QPA 3.6 bit
+							data=new Uint8Array([...header(),...qpa_encode(data, QPA4_CONFIG)]);
 							break
-						case 8: // QPA 2.3 bit
-							data=new Uint8Array([...header(),...qpa_encode(floats_to_bytes(data), QPA2_CONFIG)]);
+						case 8: // QPA 3.2 bit
+							data=new Uint8Array([...header(),...qpa_encode(data, QPA3_CONFIG)]);
 							break
-						case 9: // QPA 1.1 bit
-							data=new Uint8Array([...header(),...qpa_encode(floats_to_bytes(data), QPA1_CONFIG)]);
+						case 9: // QPA 2.3 bit
+							data=new Uint8Array([...header(),...qpa_encode(data, QPA2_CONFIG)]);
+							break
+						case 10: // QPA 1.1 bit
+							data=new Uint8Array([...header(),...qpa_encode(data, QPA1_CONFIG)]);
 							break
 						default:
 							break
@@ -963,7 +1098,7 @@ d554451111c31315d51311113313553d43ad33335333311033ccb3b33c111111c111111d3bbbcc35
 	{
 		var file = new Blob([data])
 		var link = document.createElement('a')
-		link.href = URL.createObjectURL(file)
+		link.href = URL.createObjectURL(file, {"type": "application/octet-stream"})
 		switch (format) 
 		{
 			case 0:
@@ -985,19 +1120,23 @@ d554451111c31315d51311113313553d43ad33335333311033ccb3b33c111111c111111d3bbbcc35
 				link.download = `defiance_${filename.split(".")[0]}_1.defy`
 				break					
 			case 6: 
-				link.download = `defiance_${filename.split(".")[0]}_qpa_4.defy`
+				link.download = `defiance_${filename.split(".")[0]}_qpa_5.defy`
 				break	
 			case 7: 
-				link.download = `defiance_${filename.split(".")[0]}_qpa_3.defy`
+				link.download = `defiance_${filename.split(".")[0]}_qpa_4.defy`
 				break	
 			case 8: 
-				link.download = `defiance_${filename.split(".")[0]}_qpa_2.defy`
+				link.download = `defiance_${filename.split(".")[0]}_qpa_3.defy`
 				break	
 			case 9: 
+				link.download = `defiance_${filename.split(".")[0]}_qpa_2.defy`
+				break	
+			case 10: 
 				link.download = `defiance_${filename.split(".")[0]}_qpa_1.defy`
 				break					
 		}		
 		link.click()
+		URL.revokeObjectURL(link.href)
 	}
 </script>
 </body>
