--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@ const QPA5_CONFIG = {
     magic: 0x35617071, /* 'qpa5' */
 };
 
+// Convert float audio data to unsigned 8-bit audio data, with a small amount of dither.
 function floats_to_bytes(data) {
     const bytes = new Uint8Array(data.length);
     for (let i = 0; i < data.length; i++) {
