--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 										</div>
 										<div class="form-check d-none" id="qpa-hq">
 											<input class="form-check-input" type="checkbox" id="qpa-hq-enabled">
-											<label class="form-check-label" for="hq-mode">HQ Mode (slow, small/no effect)</label>
+											<label class="form-check-label" for="hq-mode">HQ Mode (slow, small effect)</label>
 										</div>
 									</div>
 									<div id="defyOnly">	
