Small quantization fix

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ class QPAEncoder {
     }
 
     update(residual, reconstructed) {
-        const sample = this.samples[this.idx] * 127.49 - 0.5;
+        const sample = this.samples[this.idx] * 128;
         const weights = this.weights;
         const history = this.history;
         const delta = (residual >> this.update_shift);
@@ -435,7 +435,7 @@ class QPAEncoder {
         this.signal_dc = (this.signal_dc + sample)*.5;
         const rms_sample = sample - .875*this.signal_dc;
         this.rms += (rms_sample*rms_sample - this.rms)*(1/128);
-        let error = from_pico(to_pico(sample+128)-((reconstructed+0x7f0000)&0xff0000));
+        let error = from_pico(to_pico(sample+128)-((reconstructed+0x800000)&0xff0000));
 
         this.error_dc = (this.error_dc + error)*.5;
         error -= .875*this.error_dc;
