Credits adjust; fixed missing quote mark.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="table-cell">
 								<form>
 									<div class="form-group">
-									<label for=formatSelection">Format</label>
+									<label for="formatSelection">Format</label>
 									<select class="form-select custom-select" aria-label="format" id="formatSelection" >
 										<option value="0">Unsigned 8-bit PCM</option>
 										<option selected value="1">Defy 8-bit</option>
