Added sentence about QPA to web page

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 								<li>Drag and drop the defy file onto PIC0-8.</li>
 							</ol>
 						<li><a href="https://www.lexaloffle.com/bbs/?tid=47089">The Defy player also records binary audio strings for playback in your own carts.</a></li>	
-
 					</ol>
+					<p>Information on @luchak's QPA format is available <a href="https://www.lexaloffle.com/bbs/?tid=53933">here</a> and <a href="https://github.com/luchak/qpa-format/">here</a>.</p>
 				</div></div></div>
 			</div>
 		</div>			
